# animsmith

./: .commitlintrc.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD-PARTY.md  _typos.toml  cliff.toml  codecov.yml  deny.toml  justfile  release-plz.toml  release-targets.json
.agent-instructions/: shared.md
.cargo/: config.toml
.claude/skills/audit-task/: SKILL.md  code-invariants.md  intent-criteria.md  simplicity-criteria.md  test-criteria.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_gap.yml  feature_request.yml
.github/workflows/: audit.yml  checks.yml  ci.yml  codeql.yml  coverage.yml  fuzz.yml  lint-pr.yml  main.yml  release-binaries.yml  release-plz.yml  scorecard.yml  typos.yml
crates/animlint/: Cargo.toml
crates/animlint-core/: Cargo.toml
crates/animlint-core/src/: check.rs  config.rs  lib.rs  measure.rs  metrics.rs
crates/animlint-core/src/checks/: constant_track.rs  duration_sanity.rs  frozen_bone.rs  loop_seam.rs  mod.rs  nan.rs  quat_flip.rs  quat_norm.rs  root_motion_speed.rs  scale_keys.rs  time_monotonic.rs
crates/animlint-core/tests/: checks.rs  profile.rs  sample.rs  semantic.rs
crates/animlint-fbx/: Cargo.toml
crates/animlint-fbx/src/: lib.rs
crates/animlint-gltf/: Cargo.toml
crates/animlint-gltf/src/: lib.rs  write.rs
crates/animlint-gltf/tests/: golden_rauta.rs  load.rs  write.rs
crates/animlint-report/: Cargo.toml
crates/animlint-report/assets/: viewer.css  viewer.js
crates/animlint-report/src/: lib.rs
crates/animlint/src/: diff.rs  main.rs
crates/animsmith/: Cargo.toml  build.rs
crates/animsmith-core/: Cargo.toml  README.md
crates/animsmith-core/src/: check.rs  config.rs  contract.rs  diff.rs  evaluation.rs  finding.rs  fixtures.rs  lib.rs  measure.rs  metrics.rs  model.rs  profile.rs  sample.rs  transform.rs
crates/animsmith-core/src/checks/: bind_pose.rs  constant_track.rs  duration_sanity.rs  foot_slide.rs  fps.rs  frozen_bone.rs  gait_group.rs  in_place.rs  loop_seam.rs  missing_bones.rs  mod.rs  nan.rs  quat_flip.rs  quat_norm.rs  root_motion_speed.rs  scale_keys.rs  time_monotonic.rs
crates/animsmith-core/tests/: check_catalog_docs.rs  checks.rs  contract.rs  diff_api.rs  evaluation.rs  m3.rs  profile.rs  sample.rs  semantic.rs  transform.rs
crates/animsmith-fbx/: Cargo.toml  README.md
crates/animsmith-fbx/src/: lib.rs
crates/animsmith-fbx/testdata/: rigged_triangle_empty_take.fbx
crates/animsmith-fbx/tests/: load.rs
crates/animsmith-gltf/: Cargo.toml  README.md
crates/animsmith-gltf/src/: fix.rs  lib.rs  write.rs
crates/animsmith-gltf/tests/: assets.rs  fix.rs  golden.rs  golden_rauta.rs  hardening.rs  load.rs  write.rs
crates/animsmith-report/: Cargo.toml  README.md
crates/animsmith-report/assets/: viewer.js
crates/animsmith-report/src/: lib.rs
crates/animsmith-report/testdata/: rig.gltf
crates/animsmith-report/tests/: render.rs
crates/animsmith-testkit/: Cargo.toml
crates/animsmith-testkit/src/: lib.rs
crates/animsmith/examples/: embed.rs  gen_example_assets.rs  rig.gltf
crates/animsmith/src/: diff.rs  main.rs  render.rs
crates/animsmith/testdata/: rigged_triangle.fbx
crates/animsmith/tests/: build_version.rs  cli_contract.rs  convert_gltf.rs  convert_mesh.rs  docs_index.rs  docs_links.rs  examples_cookbook.rs  measure_mesh.rs  mixamo_tutorial.rs  scene_write_gltf.rs
docs/: README.md  ROADMAP.md  cli.md  embedding.md  examples.md  game-ready-clips.md  mixamo-tutorial.md  output.md  pipeline-scenarios.md  why-animsmith.md
docs/research/: game-ready-animation-clips.md
docs/schemas/: measurements-v1.schema.json  output-v1.schema.json  output-v2-preview.schema.json  output-v2.schema.json
examples/: README.md  character.animsmith.toml  mixamo.animsmith.toml  rauta.animlint.toml  rauta.animsmith.toml  walk.animsmith.toml
examples/assets/: README.md  clip-dirty.glb  clip.glb  walk-dirty.glb  walk.glb
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fbx_load.rs  gltf_fix_quat_hemisphere.rs  gltf_load.rs
fuzz/seeds/fbx_load/: ascii_header  binary_header
fuzz/seeds/gltf_fix_quat_hemisphere/: regression-invalid-target-path
fuzz/seeds/gltf_load/: regression-glb-length-oom  regression-glb-length-underflow  regression-invalid-target-path  regression-node-cycle  regression-target-node-oob  regression-u32-animation-output  rig.glb
fuzz/src/: lib.rs
scripts/: check-github-community-files.rb  check-github-community-files.sh  check-golden-skip-marker.sh  check-package-inventory.sh  check-release-alignment.sh  check-release-packaging.sh  check-schema-id.sh  package-release-binary.py  release-targets.py  release_archives.py  select-cli-release-tag.sh
testdata/: rig.gltf
