[workspace]
resolver = "3"
members = [
    "crates/animlint-core",
    "crates/animlint-gltf",
    "crates/animlint",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmannerm/animlint"

[workspace.dependencies]
animlint-core = { path = "crates/animlint-core", version = "0.1.0-dev" }
animlint-gltf = { path = "crates/animlint-gltf", version = "0.1.0-dev" }
glam = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
gltf = { version = "1.4", default-features = false, features = ["utils", "names"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
