[workspace]
resolver = "3"
members = [
    "crates/animsmith-core",
    "crates/animsmith-gltf",
    "crates/animsmith-fbx",
    "crates/animsmith-report",
    "crates/animsmith",
    "crates/animsmith-testkit",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmannerm/animsmith"
readme = "README.md"
include = [
    "src/**",
    "assets/**",
    "examples/**",
    "tests/**",
    "testdata/**",
    "build.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "THIRD-PARTY.md",
]
keywords = ["animation", "gltf", "lint", "gamedev", "fbx"]
categories = ["game-development", "graphics", "development-tools"]

[workspace.dependencies]
animsmith-core = { path = "crates/animsmith-core", version = "0.1.1" }
animsmith-gltf = { path = "crates/animsmith-gltf", version = "0.1.1" }
animsmith-fbx = { path = "crates/animsmith-fbx", version = "0.1.1" }
animsmith-report = { path = "crates/animsmith-report", version = "0.1.1" }
animsmith-testkit = { path = "crates/animsmith-testkit", version = "0.1.0" }
ufbx = "0.11"
glam = "0.33"
libm = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
gltf = { version = "1.4", default-features = false, features = ["utils", "names"] }
pulldown-cmark = { version = "0.13", default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
toml = "1.1"
tempfile = "3"
