[package]
name = "animlint-core"
description = "Engine-agnostic data model, sampling, measurements, and checks for the animlint animation-clip linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
