[package]
name = "animlint-fbx"
description = "FBX ingestion into the animlint core model, via the official ufbx bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
animlint-core = { workspace = true }
ufbx = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
