[package]
name = "animlint-report"
description = "Self-contained offline HTML reports for animlint: WebGL skeleton playback driven by the exact pose data the checks judged, plus SVG metric charts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
animlint-core = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
