[package]
name = "animlint"
description = "A linter for skeletal animation clips: game-engine-friendliness checks for glTF/GLB (and later FBX) animations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "animlint"
path = "src/main.rs"

[dependencies]
animlint-core = { workspace = true }
animlint-gltf = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
