[package]
name = "animlint"
description = "A linter for skeletal animation clips: game-engine-friendliness checks for glTF/GLB (and later FBX) animations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "animlint"
path = "src/main.rs"

[features]
default = ["fbx", "report"]
# FBX input via ufbx (bundles a C library; --no-default-features gives
# a pure-Rust glTF-only build).
fbx = ["dep:animlint-fbx"]
# HTML report generation.
report = ["dep:animlint-report"]

[dependencies]
animlint-core = { workspace = true }
animlint-gltf = { workspace = true }
animlint-fbx = { workspace = true, optional = true }
animlint-report = { workspace = true, optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
