[package]
name = "animsmith-core"
description = "Engine-agnostic data model, sampling, measurements, and checks for the animsmith animation-clip linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/animsmith-core"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
