[package]
name = "animsmith-core"
description = "Engine-agnostic data model, sampling, measurements, and checks for the animsmith animation-clip linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/animsmith-core"
readme = "README.md"
include.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-apple-darwin", "x86_64-pc-windows-msvc"]

[features]
# Exposes `fixtures`: the analytic walk-cycle builder shared with
# animsmith-testkit. Off by default so published builds carry neither the
# fixture code nor its libm dependency.
fixtures = ["dep:libm"]

[dependencies]
glam = { workspace = true }
# Pure-Rust libm: bit-identical trig across platforms, so the committed
# example assets built on the `fixtures` builder regenerate byte-for-byte
# on Linux / macOS / Windows. Pulled in only by the `fixtures` feature.
libm = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Self-dependency so this crate's own tests (e.g. tests/semantic.rs) build
# with the `fixtures` feature enabled.
animsmith-core = { path = ".", features = ["fixtures"] }
serde_json = { workspace = true }
