[package]
name = "animsmith-fbx"
description = "FBX ingestion into the animsmith core model, via the official ufbx bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/animsmith-fbx"
readme.workspace = true
include.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
animsmith-core = { workspace = true }
ufbx = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
