[package]
name = "animsmith-gltf"
description = "glTF/GLB ingestion into the animsmith core model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/animsmith-gltf"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
animsmith-core = { workspace = true }
gltf = { workspace = true }
base64 = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
