[package]
name = "animsmith-testkit"
description = "Internal fixture builders shared by animsmith's tests and the example asset generator (not published)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# The `fixtures` feature pulls in the shared analytic walk-cycle builder
# (and its byte-stable libm trig) that the committed example assets wrap.
animsmith-core = { workspace = true, features = ["fixtures"] }
glam = { workspace = true }
