[package]
name = "animsmith-testkit"
description = "Internal fixture builders shared by animsmith's tests and the example asset generator (not published)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# The `fixtures` feature exposes the shared analytic walk-cycle builder
# that the committed example assets wrap.
animsmith-core = { workspace = true, features = ["fixtures"] }
glam = { workspace = true }
# Pure-Rust libm: bit-identical trig across platforms. Passed into the
# fixtures builder as its sine so the committed example assets regenerate
# byte-for-byte on Linux / macOS / Windows.
libm = { workspace = true }
